[package]
name = "cyphus-integration"
version = "0.1.0"
authors = ["Logan A Morrison <loanmorr@ucsc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
log = "0.4.8"
lazy_static = "1.4"
ndarray = "0.13"
